--- a/package.json
+++ b/package.json
@@ -4,19 +4,24 @@
   "homepage": "https://lowvoltage.github.io/react101",
   "private": true,
   "dependencies": {
+    "lodash": "^4.15.0",
     "react": "^15.5.4",
     "react-dom": "^15.5.4"
   },
   "devDependencies": {
     "gh-pages": "^0.12.0",
+    "node-sass": "^4.5.2",
     "react-scripts": "0.9.5"
   },
   "scripts": {
+    "dev": "node --debug=12345 server.js",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build",
+    "build-css": "node-sass src/ -o src/",
+    "watch-css": "npm run build-css && node-sass src/ -o src/ --watch --recursive"
   }
 }
